# persistent-sorted-set-ocaml

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  persistent_sorted_set_ocaml.opam
.github/workflows/: ci.yml
bench/: bench_pss.ml  dune
docs/: ocaml-improvement-report.md  perf.md  type-improvements.md  upstream-differences.md
lib/: dune  persistent_sorted_set.ml  persistent_sorted_set.mli
script/: benchmark_vs_cljs.sh  check_ci_browser_memory_test.sh  diff_upstream_tests.sh
test/: dune  js_memory_test.ml  js_smoke.ml  run_browser_memory_test.js  test_persistent_sorted_set.ml  upstream_test_aliases.tsv
