opam-version: "2.0"
synopsis: "OCaml port of persistent-sorted-set"
description: "A persistent sorted set API ported from logseq/persistent-sorted-set."
maintainer: "tiensonqin"
authors: ["tiensonqin"]
license: "MIT"
depends: [
  "ocaml" {>= "5.2.1"}
  "dune" {>= "3.17"}
  "js_of_ocaml-compiler" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
